[package]
name = "nudge-ngx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
futures = "0.3.30"
humansize = "2.1.3"
indicatif = "0.17.8"
rand = "0.9.0-alpha.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
simple-log = "1.6.0"
thiserror = "1.0.61"
time = "0.3.36"
log = "0.4.21"
gethostname = "0.4.3"
blake3 = "1.5.1"
